Refactor item use case and repository: migrate from domain models to entity package for improved structure and consistency
