# docs/swagger.json
@@ -61,7 +61,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ItemListResponse"
+                            "$ref": "#/definitions/entity.ItemListResponse"
                         }
                     },
                     "400": {
@@ -97,7 +97,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.ItemCreate"
+                            "$ref": "#/definitions/entity.ItemCreate"
                         }
                     }
                 ],
@@ -105,7 +105,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.ItemIdRead"
+                            "$ref": "#/definitions/entity.ItemIdRead"
                         }
                     },
                     "400": {
@@ -149,7 +149,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Item"
+                            "$ref": "#/definitions/entity.Item"
                         }
                     },
                     "400": {
@@ -198,7 +198,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Item"
+                            "$ref": "#/definitions/entity.Item"
                         }
                     }
                 ],
@@ -206,7 +206,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Item"
+                            "$ref": "#/definitions/entity.Item"
                         }
                     },
                     "400": {
@@ -300,7 +300,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.ItemUpdate"
+                            "$ref": "#/definitions/entity.ItemUpdate"
                         }
                     }
                 ],
@@ -308,7 +308,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Item"
+                            "$ref": "#/definitions/entity.Item"
                         }
                     },
                     "400": {
@@ -351,18 +351,7 @@
                 }
             }
         },
-        "enums.ItemType": {
-            "type": "integer",
-            "enum": [
-                0,
-                1
-            ],
-            "x-enum-varnames": [
-                "Physical",
-                "Digital"
-            ]
-        },
-        "models.Image": {
+        "common.Image": {
             "type": "object",
             "properties": {
                 "height": {
@@ -376,95 +365,7 @@
                 }
             }
         },
-        "models.Item": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "deleted_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "image": {
-                    "$ref": "#/definitions/models.Image"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "integer"
-                },
-                "type": {
-                    "$ref": "#/definitions/enums.ItemType"
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.ItemCreate": {
-            "type": "object",
-            "properties": {
-                "image": {
-                    "$ref": "#/definitions/models.Image"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "integer"
-                },
-                "type": {
-                    "$ref": "#/definitions/enums.ItemType"
-                }
-            }
-        },
-        "models.ItemIdRead": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.ItemListResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "description": "The main response data (can be list or single resource).",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Item"
-                    }
-                },
-                "paging": {
-                    "description": "Pagination details (optional, for paginated responses).",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/models.Pagination"
-                        }
-                    ]
-                }
-            }
-        },
-        "models.ItemUpdate": {
-            "type": "object",
-            "properties": {
-                "image": {
-                    "$ref": "#/definitions/models.Image"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "type": {
-                    "$ref": "#/definitions/enums.ItemType"
-                }
-            }
-        },
-        "models.Pagination": {
+        "common.Pagination": {
             "type": "object",
             "properties": {
                 "current_cursor": {
@@ -478,6 +379,105 @@
                 },
                 "total_items": {
                     "type": "integer"
+                }
+            }
+        },
+        "entity.Item": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "image": {
+                    "$ref": "#/definitions/common.Image"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "type": {
+                    "$ref": "#/definitions/entity.ItemType"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "entity.ItemCreate": {
+            "type": "object",
+            "properties": {
+                "image": {
+                    "$ref": "#/definitions/common.Image"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "type": {
+                    "$ref": "#/definitions/entity.ItemType"
+                }
+            }
+        },
+        "entity.ItemIdRead": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "entity.ItemListResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "description": "The main response data (can be list or single resource).",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.Item"
+                    }
+                },
+                "paging": {
+                    "description": "Pagination details (optional, for paginated responses).",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/common.Pagination"
+                        }
+                    ]
+                }
+            }
+        },
+        "entity.ItemType": {
+            "type": "integer",
+            "enum": [
+                0,
+                1
+            ],
+            "x-enum-varnames": [
+                "Physical",
+                "Digital"
+            ]
+        },
+        "entity.ItemUpdate": {
+            "type": "object",
+            "properties": {
+                "image": {
+                    "$ref": "#/definitions/common.Image"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "type": {
+                    "$ref": "#/definitions/entity.ItemType"
                 }
             }
         }
